--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate && <actual-build-command>"
+    "postinstall": "prisma generate && npm run build"
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
