--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prisma:generate": "prisma generate",
+    "postinstall": "prisma generate && npm run build",
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
